# constellation-backend

./: .env.example  .gitignore  Makefile  Procfile  README.md  pyproject.toml
constellation_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: api_conventions.md  architecture_overview.md  cloud_native_plan.md  db_schema.md
scripts/: seed_database.py
services/auth-service/app/: auth_logic.py  config.py  main.py  models.py
services/auth_service/: README.md
services/auth_service/app/: auth_logic.py  config.py  main.py  models.py
services/expense_service/: README.md
services/expense_service/app/: logic.py  main.py  models.py
tests/: conftest.py
tests/services/auth_service/: test_signup.py
